--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -35,7 +35,8 @@ jobs:
       - name: Generate html report
         if: success() || failure()
         run: mvn site
-      - uses: actions/upload-artifact@v4
+      - name: Publish Test Results
+        uses: EnricoMi/publish-unit-test-result-action@v2        
         with:
-          name: report
-          path: target/site
+         files: 
+          target/surefire-reports/TEST-com.example.testcases.TestHelloWorld.xml
