--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,9 +26,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Set up Firefox
-        uses: mozilla/fxtest@v4
+        uses: browser-actions/setup-firefox@v1
         with:
-            version: '124.0.2'
+          firefox-version:  '124.0.2'          
                                   
       - name: Build project 
         run: mvn compile
