--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,7 +34,7 @@ jobs:
         run: mvn compile
         
       - name: Run test
-        run: mvn test
+        run: mvn test -Dbrowser=firefox -Dheadless=true
           
       - name: Generate html report
         if: success() || failure()
