--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -46,6 +46,7 @@ jobs:
         with:
          files: 
           target/surefire-reports/TEST-saucedemo.com.testcases.LoginTest.xml
+          target/surefire-reports/TEST-saucedemo.com.testcases.AddProductsToCartTest.xml
           
       - uses: actions/upload-artifact@v4
         if: success() || failure()
